[gd_scene load_steps=7 format=3 uid="uid://cocw1dfe5hbr"]

[ext_resource type="Script" path="res://Scripts/game_results.gd" id="1_1ruo2"]

[sub_resource type="LabelSettings" id="LabelSettings_vkqtd"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_13np4"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j1hc6"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bo6rm"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5igm5"]
font_size = 40
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="GameResults" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ruo2")

[node name="ShelterStats" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShelterLabel" type="Label" parent="ShelterStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1048.0
offset_top = 32.0
offset_right = 1208.0
offset_bottom = 69.0
grow_horizontal = 0
text = "schronów"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="ExpansionLabel" type="Label" parent="ShelterStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1028.0
offset_top = 64.0
offset_right = 1208.0
offset_bottom = 101.0
grow_horizontal = 0
text = "powiększeń"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="PeopleLabel" type="Label" parent="ShelterStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1016.0
offset_top = 96.0
offset_right = 1208.0
offset_bottom = 133.0
grow_horizontal = 0
text = "milionów ludzi"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="ShelterCountLabel" type="Label" parent="ShelterStats"]
layout_mode = 0
offset_left = 1068.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 69.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")
horizontal_alignment = 2

[node name="ExpansionCountLabel" type="Label" parent="ShelterStats"]
layout_mode = 0
offset_left = 1056.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 101.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")
horizontal_alignment = 2

[node name="PeopleCountLabel" type="Label" parent="ShelterStats"]
layout_mode = 0
offset_left = 1024.0
offset_top = 96.0
offset_right = 1056.0
offset_bottom = 133.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")
horizontal_alignment = 2

[node name="FoodStats" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RationsLabel" type="Label" parent="FoodStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1028.0
offset_top = 128.0
offset_right = 1208.0
offset_bottom = 165.0
grow_horizontal = 0
text = "milionów racji"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="PeopleLabel" type="Label" parent="FoodStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 920.0
offset_top = 160.0
offset_right = 1208.0
offset_bottom = 197.0
grow_horizontal = 0
text = "milionów ludzi głodnych"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="RationsCountLabel" type="Label" parent="FoodStats"]
layout_mode = 0
offset_left = 992.0
offset_top = 128.0
offset_right = 1056.0
offset_bottom = 165.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")
horizontal_alignment = 2

[node name="PeopleCountLabel" type="Label" parent="FoodStats"]
layout_mode = 0
offset_left = 928.0
offset_top = 160.0
offset_right = 960.0
offset_bottom = 197.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")
horizontal_alignment = 2

[node name="HeritageStats" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CultureLabel" type="Label" parent="HeritageStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_top = 160.0
offset_right = 218.0
offset_bottom = 197.0
grow_horizontal = 0
text = "Zachowanych dzieł:"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="PeopleLabel" type="Label" parent="HeritageStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_top = 128.0
offset_right = 268.0
offset_bottom = 165.0
grow_horizontal = 0
text = "Przełomów naukowych:"
label_settings = SubResource("LabelSettings_vkqtd")
horizontal_alignment = 2

[node name="CultureCountLabel" type="Label" parent="HeritageStats"]
layout_mode = 0
offset_left = 259.0
offset_top = 160.0
offset_right = 302.0
offset_bottom = 197.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")

[node name="PeopleCountLabel" type="Label" parent="HeritageStats"]
layout_mode = 0
offset_left = 308.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 165.0
text = "0"
label_settings = SubResource("LabelSettings_13np4")

[node name="ResearchStats" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IdolsLabel" type="Label" parent="ResearchStats"]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 192.0
offset_bottom = 133.0
text = "Wielcy ludzie:"
label_settings = SubResource("LabelSettings_j1hc6")

[node name="IdolsLevels" type="Label" parent="ResearchStats"]
layout_mode = 0
offset_left = 192.0
offset_top = 96.0
offset_right = 232.0
offset_bottom = 133.0
text = "0"
label_settings = SubResource("LabelSettings_bo6rm")

[node name="ResearchLabel" type="Label" parent="ResearchStats"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 259.0
offset_bottom = 101.0
text = "Poziomów rozwoju:"
label_settings = SubResource("LabelSettings_j1hc6")

[node name="ResearchLevels" type="Label" parent="ResearchStats"]
layout_mode = 0
offset_left = 259.0
offset_top = 64.0
offset_right = 299.0
offset_bottom = 101.0
text = "0"
label_settings = SubResource("LabelSettings_bo6rm")

[node name="MasterStats" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SavedLabel" type="Label" parent="MasterStats"]
layout_mode = 0
offset_left = 32.0
offset_top = 448.0
offset_right = 1248.0
offset_bottom = 512.0
text = "0 tysięcy uratowanych ludzi"
label_settings = SubResource("LabelSettings_5igm5")
horizontal_alignment = 1

[node name="HeritageLabel" type="Label" parent="MasterStats"]
layout_mode = 0
offset_left = 32.0
offset_top = 512.0
offset_right = 1248.0
offset_bottom = 576.0
text = "0% ocalonego dziedzictwa"
label_settings = SubResource("LabelSettings_5igm5")
horizontal_alignment = 1
